tests/ui/stubbing/generic_trait_fn.expected
error: failed to resolve `<TestStruct as TraitX>::generic_fn`: unable to find implementation of associated function `TraitX::generic_fn` for TestStruct\
generic_trait_fn.rs\
|\
| #[kani::stub(<TestStruct as TraitX>::generic_fn, <TestStruct as TraitY>::generic_fn)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|\
   = help: Kani does not currently support stubs or function contracts on generic functions in traits.\
            See https://github.com/model-checking/kani/issues/1997#issuecomment-3134614734 for more information.

error: failed to resolve `<TestStruct as TraitY>::generic_fn`: unable to find implementation of associated function `TraitY::generic_fn` for TestStruct\
generic_trait_fn.rs\
|\
| #[kani::stub(<TestStruct as TraitX>::generic_fn, <TestStruct as TraitY>::generic_fn)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|\
   = help: Kani does not currently support stubs or function contracts on generic functions in traits.\
            See https://github.com/model-checking/kani/issues/1997#issuecomment-3134614734 for more information.

error: aborting due to 2 previous errors